--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "lint": "standard | snazzy",
-    "lint:fix": "standard --fix | snazzy",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "test": "node --test ./test/*.test.js",
     "test:typescript": "tsd --files test/ && tsc ./index.d.ts --noEmit"
   },
@@ -33,8 +33,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "eslint": "^9.13.0",
+    "neostandard": "^0.11.7",
     "snazzy": "^9.0.0",
-    "standard": "^17.1.2",
     "tsd": "^0.31.2",
     "typescript": "^5.6.2",
     "undici": "^6.19.8"
