--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "snazzy": "^9.0.0",
     "tsd": "^0.31.2",
     "typescript": "^5.6.2",
-    "undici": "^7.0.0-alpha.7"
+    "undici": "^7.0.0"
   }
 }
