--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "valkey": "docker run -p 6379:6379 --rm valkey/valkey:8.0",
-    "test": "node --test ./test/*.test.js",
+    "test": "node --test --test-concurrency=1 ./test/*.test.js",
     "test:typescript": "tsd --files test/ && tsc ./index.d.ts --noEmit"
   },
   "repository": {
