--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "test": "node --test ./test/*.test.js",
+    "valkey": "docker run -p 6379:6379 --rm valkey/valkey:8.0",
+    "test": "node --test --test-concurrency=1 ./test/*.test.js",
     "test:typescript": "tsd --files test/ && tsc ./index.d.ts --noEmit"
   },
   "repository": {
@@ -38,6 +39,6 @@
     "snazzy": "^9.0.0",
     "tsd": "^0.31.2",
     "typescript": "^5.6.2",
-    "undici": "^7.0.0"
+    "undici": "^7.1.0"
   }
 }
