--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@platformatic/undici-cache-redis",
-  "version": "0.4.0",
+  "version": "0.5.0-alpha.0",
   "description": "An Undici cache store with a Redis backend.",
   "main": "index.js",
   "directories": {
