--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "redis"
   ],
   "author": "Platformatic Inc. <info@platformatic.dev> (https://platformatichq.com)",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "types": "./index.d.ts",
   "bugs": {
     "url": "https://github.com/platformatic/undici-cache-redis/issues"
