docs: update Node.js requirement to v20+ and add v24 to CI
Update minimum Node.js version requirement from 18 to 20 in README
and add Node.js 24 to the CI test matrix to ensure compatibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
     needs: setup-node-modules
     strategy:
       matrix:
-        version: [20, 22]
+        version: [20, 22, 24]
     steps:
       - name: Git Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
