--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "lint:fix": "eslint --fix",
     "valkey": "docker compose up -d",
     "test": "node --test --test-concurrency=1 ./test/*.test.js",
-    "test:typescript": "tsd --files test/ && tsc ./index.d.ts --noEmit"
+    "test:typescript": "tsd --files test/ && tsc ./index.d.ts --noEmit",
+    "example:server": "node example/server.js",
+    "example:client": "node example/client.js",
+    "example:advanced": "node example/advanced-client.js",
+    "example:docker:up": "cd example && docker-compose up -d",
+    "example:docker:down": "cd example && docker-compose down",
+    "example:run": "cd example && ./run-example.sh"
   },
   "repository": {
     "type": "git",
@@ -40,6 +46,9 @@
     "snazzy": "^9.0.0",
     "tsd": "^0.31.2",
     "typescript": "^5.6.2",
-    "undici": "^7.1.0"
+    "undici": "^7.1.0",
+    "fastify": "^4.25.2",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1"
   }
 }
