--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "example:advanced": "node example/advanced-client.js",
     "example:docker:up": "cd example && docker-compose up -d",
     "example:docker:down": "cd example && docker-compose down",
-    "example:run": "cd example && ./run-example.sh"
+    "example:run": "cd example && ./run-example.sh",
+    "bench": "cd benchmarks && npm install && npm run bench",
+    "bench:no-cache": "cd benchmarks && npm install && npm run bench:no-cache",
+    "bench:memory-cache": "cd benchmarks && npm install && npm run bench:memory-cache",
+    "bench:redis-cache": "cd benchmarks && npm install && npm run bench:redis-cache"
   },
   "repository": {
     "type": "git",
@@ -49,6 +53,7 @@
     "undici": "^7.1.0",
     "fastify": "^4.25.2",
     "pino": "^8.17.2",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "autocannon": "^7.15.0"
   }
 }
