$(cat <<'EOF' refactor: rename module from @platformatic/undici-cache-redis to undici-cache-redis
- Updated package.json name field
- Updated all documentation references in README.md
- Updated example documentation in example/README.md
- Updated benchmark documentation in benchmarks/README.md
- Updated project overview in CLAUDE.md

This change removes the @platformatic scope and simplifies the module name.
EOF
)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@platformatic/undici-cache-redis",
+  "name": "undici-cache-redis",
   "version": "0.7.1",
   "description": "An Undici cache store with a Redis backend.",
   "main": "index.js",
