--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,12 +44,31 @@ jobs:
         run: npm run lint
 
   unit-tests:
-    name: Unit Tests (Node ${{ matrix.version }})
+    name: Unit Tests (Node ${{ matrix.node-version }}, ${{ matrix.redis.name }})
     runs-on: ubuntu-latest
     needs: setup-node-modules
     strategy:
       matrix:
-        version: [20, 22, 24]
+        node-version: [20, 22, 24]
+        redis:
+          - name: "Redis 7.2"
+            image: "redis:7.2-alpine"
+          - name: "Redis 7.4"
+            image: "redis:7.4-alpine"
+          - name: "Valkey 8.0"
+            image: "valkey/valkey:8.0-alpine"
+          - name: "Valkey 8.1"
+            image: "valkey/valkey:8.1-alpine"
+    services:
+      redis:
+        image: ${{ matrix.redis.image }}
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping 2>/dev/null || valkey-cli ping 2>/dev/null || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Git Checkout
         uses: actions/checkout@ff7abcd0c3c05ccf6adc123a8cd1fd4fb30fb493
@@ -57,13 +76,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
-          node-version: ${{ matrix.version }}
+          node-version: ${{ matrix.node-version }}
           cache: 'npm'
-
-      # Using docker compose to avoid duplication and because it isn't possible
-      # to override the entrypoint using GHA `services` block
-      - name: Start valkey services
-        run: docker compose up -d
 
       - name: Install Dependencies
         run: npm install
@@ -71,7 +85,31 @@ jobs:
       - name: Run Tests
         run: npm run test
 
-      - name: Shutdown valkey
+  integration-tests:
+    name: Integration Tests (Advanced Redis Configurations)
+    runs-on: ubuntu-latest
+    needs: setup-node-modules
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
+
+      # Using docker compose for advanced configurations (preconfigured, misconfigured)
+      - name: Start Valkey services with custom configurations
+        run: docker compose up -d
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run Integration Tests
+        run: npm run test
+
+      - name: Shutdown Valkey services
         run: docker compose down
 
   type-tests:
