--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
   "homepage": "https://github.com/platformatic/undici-cache-redis#readme",
   "dependencies": {
     "iovalkey": "^0.3.3",
-    "lru_map": "^0.4.1",
-    "atomic-sleep": "^1.0.0"
+    "lru_map": "^0.4.1"
   },
   "devDependencies": {
+    "atomic-sleep": "^1.0.0",
     "@types/node": "^22.7.4",
     "eslint": "^9.32.0",
     "neostandard": "^0.12.0",
