--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "typecheck": "tsc -p . --noEmit",
     "format": "prettier -w benchmarks src test",
     "test": "c8 -c test/config/c8-local.json node --test --test-reporter=cleaner-spec-reporter --test-timeout=300000 'test/**/*.test.ts'",
+    "test:v1": "c8 -c test/config/c8-local.json node --test --test-reporter=cleaner-spec-reporter --test-timeout=300000 'test/v1/*.test.ts'",
+    "test:v2": "c8 -c test/config/c8-local.json node --test --test-reporter=cleaner-spec-reporter --test-timeout=300000 'test/v2/*.test.ts'",
     "test:ci": "c8 -c test/config/c8-ci.json node --test --test-reporter=cleaner-spec-reporter --test-timeout=300000 'test/**/*.test.ts'",
     "test:integration": "node --test --test-reporter=cleaner-spec-reporter --test-timeout=300000 'test/**/*.test.js'",
     "test:docker:up": "docker-compose up -d --wait",
     "test:docker:down": "docker-compose down",
-    "ci": "npm run build && npm run lint && npm run test:ci && npm run test:integration",
+    "ci": "pnpm run build && pnpm run lint && pnpm run test:ci && pnpm run test:integration",
     "prepublishOnly": "npm run build && npm run lint",
     "postpublish": "git push origin && git push origin -f --tags",
     "example:server": "node example/server.ts",
